# asmbl

./: Cargo.toml  asmbl.lua
.github/workflows/: main.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: env.rs  lib.rs  recipe.rs  relativiser.rs  scheduling.rs  targets.rs  targets_spec.rs  unit.rs
crates/core/src/make/: mod.rs  parser.rs
crates/core/src/recipe/: mod.rs  parser.rs
crates/lua-frontend/: Cargo.toml
crates/lua-frontend/src/: lib.rs
crates/make-frontend/: Cargo.toml
crates/make-frontend/src/: lib.rs  parser.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
examples/c/: asmbl.lua
examples/c/include/: header.h
examples/c/src/: main.c  name.c
examples/simple/: .gitignore  asmbl.lua  asmbl.toml  dir.lua
tools/docker/dev/: Dockerfile  docker-compose.yml
