[package]
name = "asmbl-cli"
version = "0.1.0"
authors = ["gsr"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
asmbl-core = { path = "../../crates/core" }
asmbl-lua-frontend = { path = "../../crates/lua-frontend" }
asmbl-make-frontend = { path = "../../crates/make-frontend" }
asmbl-utils = { path = "../../crates/utils" }
