[package]
name = "asmbl-cli"
version = "0.1.0"
authors = ["gsr"]
edition = "2018"

[dependencies]
asmbl-core = { path = "../../crates/core" }
asmbl-lua-frontend = { path = "../../crates/lua-frontend" }
asmbl-utils = { path = "../../crates/utils" }
clap = "2.33.0"
failure = "0.1.6"
pathdiff = "0.1.0"
